2009-06-26  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/Run.cpp: fix some small problems with using
	g++ on win32.

2009-06-25  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/Contact.h: tag const methods
	as such.

2009-06-24  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/impl/NameServer.h: add hook to
	allow reuse of fallback multicast name server

2009-06-23  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/src/BottleImpl.cpp: fix bug in smartAdd() method 
	that failed to correctly interpret sequences with multiple periods
	as strings (e.g. IP addresses).

	* src/libYARP_OS/harness/BottleTest.cpp: add test for correct
	interpretation of IPv4 addresses as strings.
		

2009-06-17  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/harness/PortReaderBufferTest.cpp: mistake
	in test: messages in checkCallback need to be send with "strict"
	flag set, to be sure they don't get dropped.  Thanks to
	Alejandro R. Mosteo for drawing attention to PortReaderBufferTest
	problem.

	* src/libYARP_OS/include/yarp/os/impl/McastCarrier.h: allocate
	global mcast election object only if mcast is actually used.
	ACE's hash objects are quite large!

2009-06-15  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_sig/src/Vector.cpp: improve read() method to 
	do a sanity check, for better error recovery (thanks Arjan Gijsberts)

2009-06-14  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/harness/PortReaderBufferTest.cpp: increase
	timeout for callback test, it may be too tight.

2009-06-12  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/: lots of updates to make Java examples work again
	after yarp classes were moved into a package (thank you Sebastian 
	Wrede!)

2009-06-09  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/impl/ThreadImpl.h: avoid using
	ACE_Auto_Event class, in favor of Semaphores - just because they